apps/jellyfin/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyfin
  namespace: jellyfin
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: jellyfin
  template:
    metadata:
      labels:
        app: jellyfin
    spec:
      containers:
        - name: jellyfin
          image: lscr.io/linuxserver/jellyfin:latest@sha256:b0b6d034aa52ed6e1a76daaa3d7ed29039d2b802a50fa8ffd1d9fc8d3fd836c7
          ports:
            - containerPort: 8096
          volumeMounts:
            - name: jellyfin-config
              mountPath: /config
            - name: data
              mountPath: /data
            - name: dev-dri
              mountPath: /dev/dri
          securityContext:
            privileged: true
      volumes:
        - name: jellyfin-config
          hostPath:
            path: /data/crypt/jellyfin
            type: DirectoryOrCreate
        - name: data
          hostPath:
            path: /data/crypt/media
            type: DirectoryOrCreate
        - name: dev-dri
          hostPath:
            path: /dev/dri
            type: DirectoryOrCreate
